syntax = 'proto3';
import "google/protobuf/timestamp.proto";

option go_package = "booking-service/internal/generated;generated";

package booking_service;

message Room {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string number = 4;
  string type = 5;
  uint64 hotel_id = 6;
}

message RoomDTO {
  string number = 1;
  string type = 2;
  uint64 hotel_id = 3;
}

message Review {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  uint64 booking_id = 4;
  uint64 guest_id = 5;
  int32 rating = 6;
  string comment = 7;
}

message ReviewDTO {
  uint64 booking_id = 1;
  uint64 guest_id = 2;
  int32 rating = 3;
  string comment = 4;
}

message HousekeepingRequest {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  uint64 room_id = 4;
  google.protobuf.Timestamp request_time = 5;
  string status = 6;
}

message HouseKeepingRequestDTO {
  uint64 room_id = 1;
  google.protobuf.Timestamp request_time = 2;
}

message Hotel {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
}

message Guest {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
}

message GuestDTO {
  string name = 1;
}

message Employee {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  string role = 5;
}

message EmployeeDTO {
  string name = 1;
  string role = 2;
}

message Booking {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  uint64 room_id = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
  string comment = 7;
  string status = 8;
  string payment_status = 9;
  repeated Guest guests = 10;
}

message CreateBookingDTO {
  uint64 room_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  string comment = 4;
  repeated GuestDTO guests = 5;
}